<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bottomSheetConstrain"
        style="@style/Widget.BottomSheet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bottom_sheet_background"
        android:paddingHorizontal="10dp"
        android:paddingBottom="40dp"
        app:layout_behavior="@string/bottom_sheet_behavior">




        <TextView
            android:id="@+id/title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/enter_new_shopping_item"
            android:textAllCaps="true"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Spinner
            android:id="@+id/bottom_sheet_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/minusButton"
            app:layout_constraintTop_toBottomOf="@id/title_text"
            android:layout_marginTop="10dp"/>

        <EditText
            android:id="@+id/shoppingItemName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_background"
            android:ellipsize="end"
            android:hint="@string/enter_shopping_item_name"
            android:inputType="text"
            android:lines="1"
            android:padding="10dp"
            app:layout_constraintBottom_toBottomOf="@id/minusButton"
            app:layout_constraintEnd_toStartOf="@+id/minusButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bottom_sheet_spinner"
            app:layout_constraintTop_toTopOf="@id/minusButton" />

        <Button
            android:id="@+id/addButton"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:text="@string/add_item"
            android:textColor="@color/black"
            app:backgroundTint="@null"
            android:layout_marginTop="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/shoppingItemName"
            app:shapeAppearance="@style/ShapeAppearance.Material3.Tooltip"
            app:strokeWidth="19dp" />


        <ImageButton
            android:id="@+id/minusButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:contentDescription="@string/minusbutton"
            android:src="@drawable/ic_minus_circle"
            app:layout_constraintBottom_toBottomOf="@id/count_text"
            app:layout_constraintEnd_toStartOf="@id/count_text"
            app:layout_constraintTop_toTopOf="@id/count_text" />

        <TextView
            android:id="@+id/count_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingHorizontal="10dp"
            android:text="@string/_1"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="@id/plusButton"
            app:layout_constraintEnd_toStartOf="@id/plusButton"
            app:layout_constraintTop_toTopOf="@id/plusButton"
            tools:text="17" />

        <ImageButton
            android:id="@+id/plusButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@color/white"
            android:contentDescription="@string/plusbutton"
            android:src="@drawable/ic_plus_circle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>

