<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.history.HistoryFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/RedPink"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolBar"
            style="@style/ThemeOverlay.MaterialComponents.Toolbar.Primary"
            android:layout_width="match_parent"
            app:titleTextColor="@color/white"
            android:layout_height="?attr/actionBarSize"
            app:title="@string/title" />
    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:id="@+id/day"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/appBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageButton
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@null"
            android:src="@drawable/arrow_back"/>

        <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_height="50dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:gravity="center"
            android:text="14.12.2011"/>

        <ImageButton
            android:id="@+id/forwardButton"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_height="50dp"
            android:background="@null"
            android:src="@drawable/arrow_forward"/>
    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/createShoppingList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/BUTTON"
        android:layout_margin="24dp"
        android:contentDescription="@string/add_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_plus" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/historyRV"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        style="@style/SCREEN"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintTop_toBottomOf="@id/day"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/view_no_data"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        style="@style/SCREEN"
        android:gravity="center"
        android:text="@string/no_item"
        android:textColor="#0E0A0B"
        android:textSize="16sp"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/day" />
</androidx.constraintlayout.widget.ConstraintLayout>